syntax = "proto3";

option go_package = "./lib/proto";

package main;

service TemplateService {
    rpc GetTemplate(TemplateRequest) returns (Template);
}

message TemplateRequest{
    uint32 id = 1;
}

message Template{
    uint32 id = 1;
    string created_at = 2;
    string updated_at = 3;
    string name = 4;
    repeated Element elements = 5;
}

message Element{
    uint32 id = 1;
    string type = 2;
    int32 x  = 3;
    int32 y  = 4;
    int32 width = 5;
    int32 height = 6;
    string value_from = 7;
    string font = 8;
    int32 font_size = 9;
}

